# GoogleTest-CMake-Template

./: .gitignore  CMakeLists.txt  README.md
test/: .gitignore  CMakeLists.txt
test/cmake/: clean.cmake  coverage.cmake  gtest-download.cmake  test.cmake
